deployment/risk-assessment-service.yaml
apiVersion: serving.knative.dev/v1 
kind: Service
metadata:
  name: risk-assessment
  namespace: covid-net-service
spec:
  template:
    metadata:
        annotations:
          autoscaling.knative.dev/target: '2'
          revisionTimestamp: ''
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/covid-net-service/risk-assessment:latest
        envFrom:
          - configMapRef:
              name: risk-assessment-config
          - secretRef:
              name: s3-rook
        resources:
          limits:
            cpu: '2'
            memory: 4G
          requests:
            cpu: '2'
            memory: 3G
