deployment/risk-assessment-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: risk-assessment
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: risk-assessment
  sessionAffinity: None
status:
  loadBalancer: {}
